# HoverMeter

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
.omo/: boulder.json
.omo/evidence/: final-f1-plan-compliance.txt  final-f2-code-quality-rerun.txt  final-f2-code-quality.txt  final-f4-scope-fidelity.txt  task-0-analysis.txt  task-0-arkcli-output.json  task-0-spike-note.txt  task-1-plugins-check.txt  task-10-auto-refresh.txt  task-10-error-handling.txt  task-11-drag.txt  task-11-opacity.txt  task-11-position-save.txt  task-12-refresh-after-save.txt  task-12-save-load.txt  task-2-types-check.txt  task-3-v4sign-compile.txt  task-3-v4sign-format.txt  task-4-deepseek-compile.txt  task-4-deepseek-error.txt  task-5-volcano-compile.txt  task-5-volcano-error.txt  task-6-storage-compile.txt  task-6-storage-roundtrip.txt  task-7-ui-render.txt  task-8-settings-ui.txt  task-9-autostart.txt  task-9-tray.txt
.omo/notepads/hovermeter/: issues.md  learnings.md
.omo/plans/: hovermeter.md
.omo/spike/: get_personal_plan.py
src/: App.tsx  Settings.css  Settings.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: deepseek.rs  lib.rs  main.rs  storage.rs  v4_sign.rs  volcano.rs
src/components/: TitleBar.tsx  UsageCell.tsx
src/hooks/: useUsageData.ts  useWindowDock.ts
src/types/: index.ts
src/utils/: format.ts  log.ts
