[package]
name = "hovermeter"
version = "0.1.0"
description = "HoverMeter - Floating usage meter widget"
authors = ["you"]
edition = "2021"

[lib]
name = "hovermeter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-window-state = "2"
tauri-plugin-positioner = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
keyring = "4"
tokio = { version = "1", features = ["rt"] }
